--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "webpack serve --open --mode development",
+    "start-production": "NODE_ENV=production webpack serve --open --mode production",
+    "start-no-open": "webpack serve --mode development",
+    "build": "NODE_ENV=production webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -16,5 +19,17 @@
   "bugs": {
     "url": "https://github.com/webformula/core/issues"
   },
-  "homepage": "https://github.com/webformula/core#readme"
+  "homepage": "https://github.com/webformula/core#readme",
+  "devDependencies": {
+    "@webformula/core": "file:./index.js",
+    "@webformula/material": "^0.3.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.3",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
+  }
 }
