--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "exports": {
     ".": "./src/client.js",
     "./client": "./src/client.js",
-    "./server": "./src/server.js"
+    "./server": "./src/server.js",
+    "./build/client": "./src/client-build.js"
   },
   "scripts": {
-    "start": "webpack serve --open --mode development",
+    "start": "node build.js",
     "start-server": "nodemon server-example/server.js",
     "start-production": "NODE_ENV=production webpack serve --open --mode production",
     "start-no-open": "webpack serve --mode development",
@@ -30,17 +31,8 @@
     "@webformula/core": "file:./",
     "@webformula/material": "file:../material",
     "compression": "^1.7.4",
-    "compression-webpack-plugin": "^10.0.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.3",
+    "esbuild": "0.17.19",
     "express": "^4.18.2",
-    "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "nodemon": "^2.0.22",
-    "style-loader": "^3.3.1",
-    "uglify-js": "^3.17.4",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "nodemon": "^2.0.22"
   }
 }
