--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@webformula/core",
-  "version": "0.8.4",
+  "version": "0.8.5",
   "description": "Simple no thrills app pages and routing. Super performant and light-weight!",
-  "main": "src/client.js",
+  "main": "src/client/index.js",
   "type": "module",
   "exports": {
-    ".": "./src/client.js",
-    "./client": "./src/client.js",
-    "./server": "./src/server.js",
-    "./build": "./src/client-build.js"
+    ".": "./src/client/index.js",
+    "./client": "./src/client/index.js",
+    "./server": "./src/server/index.js",
+    "./build": "./src/client/build.js"
   },
   "scripts": {
     "start": "nodemon -e js,css,html docs/server.js",
@@ -27,7 +27,7 @@
   "homepage": "https://github.com/webformula/core#readme",
   "devDependencies": {
     "@webformula/core": "file:./",
-    "@webformula/material": "^0.8.1",
+    "@webformula/material": "^0.8.3",
     "compression": "^1.7.4",
     "esbuild": "0.17.19",
     "express": "^4.18.2",
