--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@webformula/core": "file:./",
     "@webformula/material": "^0.8.5",
     "compression": "^1.7.4",
-    "esbuild": "0.17.19",
+    "esbuild": "^0.18.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
   }
