--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "homepage": "https://github.com/webformula/core#readme",
   "devDependencies": {
     "@webformula/core": "file:./",
-    "@webformula/material": "file:../material",
+    "@webformula/material": "^0.9.1",
     "compression": "^1.7.4",
     "esbuild": "^0.18.1",
     "express": "^4.18.2"
