--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@webformula/material": "^0.9.1",
     "compression": "^1.7.4",
     "esbuild": "^0.18.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "linkedom": "^0.14.26"
   }
 }
